[gd_scene load_steps=32 format=3 uid="uid://bcyokg3fmgifd"]

[ext_resource type="Script" path="res://hide_seek_control_test.gd" id="1_7ocwq"]
[ext_resource type="Texture2D" uid="uid://djj3oolji5gd8" path="res://Assets/Strand/BG/Asset 11.png" id="2_rd785"]
[ext_resource type="Texture2D" uid="uid://bn22avvrktoih" path="res://Assets/Strand/BG/Asset 21.png" id="3_66jfn"]
[ext_resource type="Texture2D" uid="uid://detlpws4ptvb5" path="res://Assets/Strand/BG/Asset 10.png" id="4_6fbsd"]
[ext_resource type="Texture2D" uid="uid://cyx4g2wgqlxhf" path="res://Assets/Strand/BG/Asset 20.png" id="5_0sbmc"]
[ext_resource type="Texture2D" uid="uid://do3dicjdilf52" path="res://Assets/Strand/BG/Asset 19.png" id="6_svfp5"]
[ext_resource type="Texture2D" uid="uid://8inryhxy7vsc" path="res://Assets/Strand/BG/Asset 6.png" id="7_tn0r5"]
[ext_resource type="Script" path="res://sun.gd" id="8_2bba0"]
[ext_resource type="Texture2D" uid="uid://culy8nlwy1l5e" path="res://Assets/Strand/BG/Asset 7.png" id="8_psdwe"]
[ext_resource type="Texture2D" uid="uid://86ciyj5vquhx" path="res://Assets/Strand/BG/Asset 13.png" id="10_0oug7"]
[ext_resource type="Texture2D" uid="uid://d4ap2qgj8sj3h" path="res://Assets/Strand/BG/Asset 14.png" id="11_hui53"]
[ext_resource type="Texture2D" uid="uid://dwstq8wwv5i3j" path="res://Assets/Strand/BG/Asset 15.png" id="12_638s7"]
[ext_resource type="Texture2D" uid="uid://dobw7ky0ukrur" path="res://Assets/Strand/BG/Asset 18.png" id="13_15iif"]
[ext_resource type="Texture2D" uid="uid://cmmc5gybbxa80" path="res://Assets/Strand/BG/Asset 17.png" id="14_f3g85"]
[ext_resource type="Texture2D" uid="uid://chfutk4q6qgyg" path="res://Assets/Strand/BG/Asset 3.png" id="15_s134o"]
[ext_resource type="Texture2D" uid="uid://cviqpw0tnye1k" path="res://Assets/Strand/BG/Asset 4.png" id="16_3mbko"]
[ext_resource type="Texture2D" uid="uid://dnyx0obkt42r5" path="res://Assets/Strand/BG/Cloud 2.png" id="16_ndryc"]
[ext_resource type="Texture2D" uid="uid://dv0tj1jnjwhhl" path="res://Assets/Strand/BG/Fågel 1.png" id="17_8ramy"]
[ext_resource type="Script" path="res://CloudAnim.gd" id="17_axmd3"]
[ext_resource type="Texture2D" uid="uid://lv4pcc550eqp" path="res://Assets/Strand/BG/Fågel 2.png" id="18_676mm"]

[sub_resource type="Animation" id="Animation_s1kf6"]
resource_name = "CloudMovement2"
length = 20.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 9.86667, 10.1667, 20),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(500, 249), Vector2(2000, 249), Vector2(-300, 249), Vector2(500, 249)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 9.86667, 10.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_a08hm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-299, 249)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lwrjx"]
_data = {
"CloudMovement2": SubResource("Animation_s1kf6"),
"RESET": SubResource("Animation_a08hm")
}

[sub_resource type="Animation" id="Animation_pkv1i"]
resource_name = "CloudMovement"
length = 20.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 20),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-194, 184), Vector2(2000, 184)]
}

[sub_resource type="Animation" id="Animation_xtehj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-194, 184)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dol1s"]
_data = {
"CloudMovement": SubResource("Animation_pkv1i"),
"RESET": SubResource("Animation_xtehj")
}

[sub_resource type="Animation" id="Animation_k8xn7"]
resource_name = "Fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_tu3qx"]
resource_name = "Fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_861gp"]
resource_name = "Fade_out_2"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_q2nyh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vd020"]
_data = {
"Fade_in": SubResource("Animation_k8xn7"),
"Fade_out": SubResource("Animation_tu3qx"),
"Fade_out_2": SubResource("Animation_861gp"),
"RESET": SubResource("Animation_q2nyh")
}

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7ocwq")

[node name="Strand_BG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -11.5
offset_right = 11.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_rd785")

[node name="Sky" type="TextureRect" parent="Strand_BG"]
layout_mode = 0
offset_left = 9.5
offset_right = 1933.5
offset_bottom = 530.0
texture = ExtResource("3_66jfn")

[node name="Island1" type="TextureRect" parent="Strand_BG"]
layout_mode = 0
offset_left = 7.5
offset_top = 471.0
offset_right = 301.5
offset_bottom = 540.0
texture = ExtResource("4_6fbsd")

[node name="Sun" type="TextureRect" parent="Strand_BG"]
offset_left = 811.5
offset_top = 66.0
offset_right = 1028.5
offset_bottom = 288.0
pivot_offset = Vector2(112, 108)
texture = ExtResource("7_tn0r5")
script = ExtResource("8_2bba0")

[node name="Shoreline" type="TextureRect" parent="Strand_BG"]
layout_mode = 0
offset_left = 10.5
offset_top = 725.0
offset_right = 1934.5
offset_bottom = 1077.0
texture = ExtResource("5_0sbmc")

[node name="Beach" type="TextureRect" parent="Strand_BG/Shoreline"]
layout_mode = 0
offset_left = -1.0
offset_top = 28.0
offset_right = 1923.0
offset_bottom = 355.0
texture = ExtResource("6_svfp5")

[node name="AnimationPlayer2" type="AnimationPlayer" parent="Strand_BG"]
root_node = NodePath("Cloud")
libraries = {
"": SubResource("AnimationLibrary_lwrjx")
}
speed_scale = 0.4

[node name="Cloud" type="TextureRect" parent="Strand_BG/AnimationPlayer2"]
visible = false
offset_left = -299.0
offset_top = 249.0
offset_right = -54.0
offset_bottom = 360.0
texture = ExtResource("8_psdwe")

[node name="Waves" type="TextureRect" parent="Strand_BG"]
layout_mode = 0
offset_left = 115.5
offset_top = 594.0
offset_right = 319.5
offset_bottom = 659.0
texture = ExtResource("10_0oug7")

[node name="Waves5" type="TextureRect" parent="Strand_BG"]
layout_mode = 0
offset_left = 1100.5
offset_top = 631.0
offset_right = 1305.5
offset_bottom = 696.0
texture = ExtResource("11_hui53")

[node name="Waves2" type="TextureRect" parent="Strand_BG"]
layout_mode = 0
offset_left = 523.5
offset_top = 680.0
offset_right = 728.5
offset_bottom = 745.0
texture = ExtResource("11_hui53")

[node name="Waves4" type="TextureRect" parent="Strand_BG"]
layout_mode = 0
offset_left = 549.0
offset_top = 550.0
offset_right = 681.0
offset_bottom = 592.0
texture = ExtResource("12_638s7")

[node name="Waves3" type="TextureRect" parent="Strand_BG"]
layout_mode = 0
offset_left = 1534.5
offset_top = 565.0
offset_right = 1666.5
offset_bottom = 607.0
texture = ExtResource("12_638s7")

[node name="Suitcase" type="TextureRect" parent="Strand_BG"]
layout_mode = 0
offset_left = 267.5
offset_top = 746.0
offset_right = 485.5
offset_bottom = 967.0
texture = ExtResource("13_15iif")

[node name="Ball" type="TextureRect" parent="Strand_BG"]
layout_mode = 0
offset_left = 333.5
offset_top = 845.0
offset_right = 516.5
offset_bottom = 986.0
texture = ExtResource("14_f3g85")

[node name="SandCastle" type="TextureRect" parent="Strand_BG"]
layout_mode = 0
offset_left = 782.5
offset_top = 696.0
offset_right = 986.5
offset_bottom = 941.0
texture = ExtResource("15_s134o")

[node name="Crab" type="TextureRect" parent="Strand_BG"]
layout_mode = 0
offset_left = 926.5
offset_top = 911.0
offset_right = 993.5
offset_bottom = 976.0
texture = ExtResource("16_3mbko")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Strand_BG"]
root_node = NodePath("Cloud2")
libraries = {
"": SubResource("AnimationLibrary_dol1s")
}
speed_scale = 0.3
script = ExtResource("17_axmd3")

[node name="Cloud2" type="TextureRect" parent="Strand_BG/AnimationPlayer"]
offset_left = -194.0
offset_top = 184.0
offset_right = -48.0
offset_bottom = 265.0
texture = ExtResource("16_ndryc")

[node name="Bird 1" type="TextureRect" parent="Strand_BG"]
layout_mode = 0
offset_left = 458.5
offset_top = 236.0
offset_right = 486.5
offset_bottom = 252.0
texture = ExtResource("17_8ramy")

[node name="Bird 2" type="TextureRect" parent="Strand_BG"]
layout_mode = 0
offset_left = 494.5
offset_top = 205.0
offset_right = 538.5
offset_bottom = 230.0
texture = ExtResource("18_676mm")

[node name="Strand_BG2" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -11.5
offset_right = 11.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_rd785")

[node name="Sky" type="TextureRect" parent="Strand_BG2"]
layout_mode = 0
offset_left = 9.5
offset_right = 1933.5
offset_bottom = 530.0
texture = ExtResource("3_66jfn")

[node name="Island1" type="TextureRect" parent="Strand_BG2"]
layout_mode = 0
offset_left = 7.5
offset_top = 471.0
offset_right = 301.5
offset_bottom = 540.0
texture = ExtResource("4_6fbsd")

[node name="Shoreline" type="TextureRect" parent="Strand_BG2"]
layout_mode = 0
offset_left = 10.5
offset_top = 725.0
offset_right = 1934.5
offset_bottom = 1077.0
texture = ExtResource("5_0sbmc")

[node name="Beach" type="TextureRect" parent="Strand_BG2/Shoreline"]
layout_mode = 0
offset_left = -1.0
offset_top = 28.0
offset_right = 1923.0
offset_bottom = 355.0
texture = ExtResource("6_svfp5")

[node name="Sun" type="TextureRect" parent="Strand_BG2"]
layout_mode = 0
offset_left = 783.5
offset_top = 65.0
offset_right = 1000.5
offset_bottom = 287.0
texture = ExtResource("7_tn0r5")

[node name="Cloud" type="TextureRect" parent="Strand_BG2"]
layout_mode = 0
offset_left = 856.5
offset_top = 161.0
offset_right = 1101.5
offset_bottom = 272.0
texture = ExtResource("8_psdwe")

[node name="Waves" type="TextureRect" parent="Strand_BG2"]
layout_mode = 0
offset_left = 115.5
offset_top = 594.0
offset_right = 319.5
offset_bottom = 659.0
texture = ExtResource("10_0oug7")

[node name="Waves5" type="TextureRect" parent="Strand_BG2"]
layout_mode = 0
offset_left = 1100.5
offset_top = 631.0
offset_right = 1305.5
offset_bottom = 696.0
texture = ExtResource("11_hui53")

[node name="Waves2" type="TextureRect" parent="Strand_BG2"]
layout_mode = 0
offset_left = 523.5
offset_top = 680.0
offset_right = 728.5
offset_bottom = 745.0
texture = ExtResource("11_hui53")

[node name="Waves4" type="TextureRect" parent="Strand_BG2"]
layout_mode = 0
offset_left = 549.0
offset_top = 550.0
offset_right = 681.0
offset_bottom = 592.0
texture = ExtResource("12_638s7")

[node name="Waves3" type="TextureRect" parent="Strand_BG2"]
layout_mode = 0
offset_left = 1534.5
offset_top = 565.0
offset_right = 1666.5
offset_bottom = 607.0
texture = ExtResource("12_638s7")

[node name="Suitcase" type="TextureRect" parent="Strand_BG2"]
layout_mode = 0
offset_left = 267.5
offset_top = 746.0
offset_right = 485.5
offset_bottom = 967.0
texture = ExtResource("13_15iif")

[node name="Ball" type="TextureRect" parent="Strand_BG2"]
layout_mode = 0
offset_left = 333.5
offset_top = 845.0
offset_right = 516.5
offset_bottom = 986.0
texture = ExtResource("14_f3g85")

[node name="SandCastle" type="TextureRect" parent="Strand_BG2"]
layout_mode = 0
offset_left = 782.5
offset_top = 696.0
offset_right = 986.5
offset_bottom = 941.0
texture = ExtResource("15_s134o")

[node name="Crab" type="TextureRect" parent="Strand_BG2"]
layout_mode = 0
offset_left = 926.5
offset_top = 911.0
offset_right = 993.5
offset_bottom = 976.0
texture = ExtResource("16_3mbko")

[node name="Cloud2" type="TextureRect" parent="Strand_BG2"]
layout_mode = 0
offset_left = 397.5
offset_top = 189.0
offset_right = 543.5
offset_bottom = 270.0
texture = ExtResource("16_ndryc")

[node name="Bird 1" type="TextureRect" parent="Strand_BG2"]
layout_mode = 0
offset_left = 458.5
offset_top = 236.0
offset_right = 486.5
offset_bottom = 252.0
texture = ExtResource("17_8ramy")

[node name="Bird 2" type="TextureRect" parent="Strand_BG2"]
layout_mode = 0
offset_left = 494.5
offset_top = 205.0
offset_right = 538.5
offset_bottom = 230.0
texture = ExtResource("18_676mm")

[node name="Strand_BG3" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -11.5
offset_right = 11.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_rd785")

[node name="Sky" type="TextureRect" parent="Strand_BG3"]
layout_mode = 0
offset_left = 9.5
offset_right = 1933.5
offset_bottom = 530.0
texture = ExtResource("3_66jfn")

[node name="Island1" type="TextureRect" parent="Strand_BG3"]
layout_mode = 0
offset_left = 7.5
offset_top = 471.0
offset_right = 301.5
offset_bottom = 540.0
texture = ExtResource("4_6fbsd")

[node name="Shoreline" type="TextureRect" parent="Strand_BG3"]
layout_mode = 0
offset_left = 10.5
offset_top = 725.0
offset_right = 1934.5
offset_bottom = 1077.0
texture = ExtResource("5_0sbmc")

[node name="Beach" type="TextureRect" parent="Strand_BG3/Shoreline"]
layout_mode = 0
offset_left = -1.0
offset_top = 28.0
offset_right = 1923.0
offset_bottom = 355.0
texture = ExtResource("6_svfp5")

[node name="Sun" type="TextureRect" parent="Strand_BG3"]
layout_mode = 0
offset_left = 783.5
offset_top = 65.0
offset_right = 1000.5
offset_bottom = 287.0
texture = ExtResource("7_tn0r5")

[node name="Cloud" type="TextureRect" parent="Strand_BG3"]
layout_mode = 0
offset_left = 856.5
offset_top = 161.0
offset_right = 1101.5
offset_bottom = 272.0
texture = ExtResource("8_psdwe")

[node name="Waves" type="TextureRect" parent="Strand_BG3"]
layout_mode = 0
offset_left = 115.5
offset_top = 594.0
offset_right = 319.5
offset_bottom = 659.0
texture = ExtResource("10_0oug7")

[node name="Waves5" type="TextureRect" parent="Strand_BG3"]
layout_mode = 0
offset_left = 1100.5
offset_top = 631.0
offset_right = 1305.5
offset_bottom = 696.0
texture = ExtResource("11_hui53")

[node name="Waves2" type="TextureRect" parent="Strand_BG3"]
layout_mode = 0
offset_left = 523.5
offset_top = 680.0
offset_right = 728.5
offset_bottom = 745.0
texture = ExtResource("11_hui53")

[node name="Waves4" type="TextureRect" parent="Strand_BG3"]
layout_mode = 0
offset_left = 549.0
offset_top = 550.0
offset_right = 681.0
offset_bottom = 592.0
texture = ExtResource("12_638s7")

[node name="Waves3" type="TextureRect" parent="Strand_BG3"]
layout_mode = 0
offset_left = 1534.5
offset_top = 565.0
offset_right = 1666.5
offset_bottom = 607.0
texture = ExtResource("12_638s7")

[node name="Suitcase" type="TextureRect" parent="Strand_BG3"]
layout_mode = 0
offset_left = 267.5
offset_top = 746.0
offset_right = 485.5
offset_bottom = 967.0
texture = ExtResource("13_15iif")

[node name="Ball" type="TextureRect" parent="Strand_BG3"]
layout_mode = 0
offset_left = 333.5
offset_top = 845.0
offset_right = 516.5
offset_bottom = 986.0
texture = ExtResource("14_f3g85")

[node name="SandCastle" type="TextureRect" parent="Strand_BG3"]
layout_mode = 0
offset_left = 782.5
offset_top = 696.0
offset_right = 986.5
offset_bottom = 941.0
texture = ExtResource("15_s134o")

[node name="Crab" type="TextureRect" parent="Strand_BG3"]
layout_mode = 0
offset_left = 926.5
offset_top = 911.0
offset_right = 993.5
offset_bottom = 976.0
texture = ExtResource("16_3mbko")

[node name="Cloud2" type="TextureRect" parent="Strand_BG3"]
layout_mode = 0
offset_left = 397.5
offset_top = 189.0
offset_right = 543.5
offset_bottom = 270.0
texture = ExtResource("16_ndryc")

[node name="Bird 1" type="TextureRect" parent="Strand_BG3"]
layout_mode = 0
offset_left = 458.5
offset_top = 236.0
offset_right = 486.5
offset_bottom = 252.0
texture = ExtResource("17_8ramy")

[node name="Bird 2" type="TextureRect" parent="Strand_BG3"]
layout_mode = 0
offset_left = 494.5
offset_top = 205.0
offset_right = 538.5
offset_bottom = 230.0
texture = ExtResource("18_676mm")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vd020")
}

[node name="ColorRect" type="ColorRect" parent="AnimationPlayer"]
z_index = 3
offset_left = -457.0
offset_top = -368.0
offset_right = 2401.0
offset_bottom = 1409.0
color = Color(0, 0, 0, 1)

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
