[gd_scene load_steps=3 format=3 uid="uid://cm3ygla4f3mcc"]

[ext_resource type="Script" path="res://hide_seek_control_test.gd" id="1_c44l3"]
[ext_resource type="Texture2D" uid="uid://c8o2xhc145nko" path="res://Images/frame_02_delay098.PNG" id="2_8nmu1"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c44l3")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.136826, 0.136826, 0.136826, 1)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Hide and seek test"

[node name="HnS_1" type="Node2D" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
position = Vector2(563, 456)

[node name="HnS_2" type="Node2D" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
position = Vector2(892, 240)

[node name="HnS_3" type="Node2D" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
position = Vector2(1269, 428)

[node name="HnS_4" type="Node2D" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
position = Vector2(568, 709)

[node name="HnS_5" type="Node2D" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
position = Vector2(886, 873)

[node name="HnS_6" type="Node2D" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
position = Vector2(1239, 741)

[node name="TestBtn" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Test game"
icon = ExtResource("2_8nmu1")

[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/HBoxContainer/TestBtn" to="." method="_on_test_btn_pressed"]
